cf-for-k8s/config/harbor/user/opsfiles/harbor-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-virtual-service
  namespace: harbor
spec:
  hosts:
    - harbor.harbor.svc.cluster.local
    - harbor.vcap.me
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: harbor.harbor.svc.cluster.local
            port:
              number: 443
